--- a/templates/baremetal.yml.j2
+++ b/templates/baremetal.yml.j2
@@ -3,21 +3,17 @@
 {% set after = unit.after | default(['network.target']) %}
 {% set service_section = unit.service | default({'Type': 'simple', 'ExecStart': '/usr/bin/true'}) %}
 {% set install_targets = unit.install_wanted_by | default(['multi-user.target']) %}
-{% set security = service_security | default({}) %}
+{% set security_defaults = (service_security if service_security is defined else None) | normalize_security %}
 {% set mounts_config = mounts | default({}) %}
 {% set ephemeral_mounts = mounts_config.ephemeral_mounts | default([]) %}
-{% set default_apply_targets = ['docker', 'podman', 'kubernetes', 'proxmox', 'baremetal'] %}
 {% set baremetal_tmpfs = namespace(items=[]) %}
-{% for mount in ephemeral_mounts %}
-  {% set apply_targets = mount.apply_to | default(default_apply_targets) %}
-  {% if 'baremetal' in apply_targets %}
-    {% set options = [] %}
-    {% if mount.size is defined %}{% set _ = options.append('size=' ~ mount.size) %}{% endif %}
-    {% if mount.mode is defined %}{% set _ = options.append('mode=' ~ mount.mode) %}{% endif %}
-    {% set _ = baremetal_tmpfs.items.append({'path': mount.path, 'options': options}) %}
-  {% endif %}
+{% for mount in ephemeral_mounts | select_mounts('baremetal') %}
+  {% set options = [] %}
+  {% if mount.size is defined %}{% set _ = options.append('size=' ~ mount.size) %}{% endif %}
+  {% if mount.mode is defined %}{% set _ = options.append('mode=' ~ mount.mode) %}{% endif %}
+  {% set _ = baremetal_tmpfs.items.append({'path': mount.path, 'options': options}) %}
 {% endfor %}
-{% set read_only_root = security.read_only_root_filesystem if security.read_only_root_filesystem is defined else true %}
+{% set read_only_root = security_defaults.read_only_root_filesystem %}
 {% set private_tmp_default = security.private_tmp if security.private_tmp is defined else true %}
 {% set protect_system_default = security.protect_system if security.protect_system is defined else (read_only_root | ternary('strict', 'full')) %}
 {% set protect_home_default = security.protect_home if security.protect_home is defined else 'yes' %}
